code/force-app/main/default/objects/Payment_Party_Change_Info__c/Payment_Party_Change_Info__c.object-meta.xml
<CustomObject>
    <label>付款人資訊異動</label>
    <nameField>
        <label>風險對象</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>