code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>付款人資訊異動</relationshipLabel>
    <relationshipName>Payment_Party_Change_Info</relationshipName>
    <type>Lookup</type>
</CustomField>