code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Account_Private_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info__c</fullName>
    <label>客戶非公開資訊</label>
    <referenceTo>Account_Private_Info__c</referenceTo>
    <relationshipLabel>付款人資訊異動</relationshipLabel>
    <relationshipName>Payment_Party_Change_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>