code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Payment_Amount_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Original_Currency__c</fullName>
    <label>付款金額(原幣) (若為0代表不滿仟元)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>