code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Payment_Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Payment_Bank_Branch__c</fullName>
    <label>付款行庫/分行</label>
    <length>50</length>
    <type>Text</type>
</CustomField>