code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Payment_Country__c.field-meta.xml
<CustomField>
    <fullName>Payment_Country__c</fullName>
    <label>付款國別</label>
    <length>50</length>
    <type>Text</type>
</CustomField>