code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Payment_Party_Change_Info_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Payment_Party_Change_Info_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>付款人資訊異動外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>