code/force-app/main/default/objects/Payment_Party_Change_Info__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>時間</label>
    <type>Date</type>
</CustomField>